<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/row0"
            android:layout_weight="1"
            android:baselineAligned="false">
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/addMedButton"
                android:drawableLeft="@drawable/add_med"
                android:background="@color/green"
                android:layout_weight="1"
                android:text="@string/add_med_string"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:layout_margin="@dimen/button_margin"
                android:clickable="true" android:onClick="launchScanActivity"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/row1"
            android:layout_weight="1"
            android:baselineAligned="false">
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/viewLogButton"
                android:adjustViewBounds="false"
                android:drawableLeft="@drawable/lifeline"
                android:background="@color/blue"
                android:layout_weight="1"
                android:text="@string/view_log_string"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_margin="@dimen/button_margin"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/docButton"
                android:drawableLeft="@drawable/doctor"
                android:background="@color/orange"
                android:layout_weight="1"
                android:text="@string/doc_string"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_margin="@dimen/button_margin"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/row2" android:layout_weight="1"
            android:baselineAligned="false">
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/removeButton"
                android:drawableLeft="@drawable/remove_med"
                android:drawableStart="@drawable/remove_med"
                android:background="@color/red"
                android:layout_weight="1"
                android:text="@string/remove_med_string"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_margin="@dimen/button_margin"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/languageButton"
                android:drawableLeft="@drawable/language"
                android:background="@color/yellow"
                android:layout_weight="1"
                android:text="@string/language_string"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_margin="@dimen/button_margin"/>
    </LinearLayout>
</LinearLayout>